# catscii

./: .envrc  Cargo.toml  readmen.md
src/: main.rs
