[package]
name = "catscii"
version = "0.1.0"
edition = "2024"

[dependencies]
artem = { version = "3", default-features = false }
axum = "0.8.1"
color-eyre = "0.6.3"
image = "0.25.6"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
